--- a/community/jobs/index.html
+++ b/community/jobs/index.html
@@ -6,5 +6,5 @@ sitemap: community/Jobs
 
 
 <h2>Jobs</h2>
-<p> If you have soybean or soybean related jobs, please contact <a href= "/about/" target="_blank">SoyBase</a> to get posted. <p>
+<p> If you have a soybean-related job to announce, please contact <a href= "/about/" target="_blank">SoyBase</a> to get it posted. <p>
 
