making small changes

--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -9,45 +9,46 @@ sitemap: community/sbw
 			<P>The Soybean Breeders Workshop is held annually in February in St. Louis, MO. Starting in 2010 copies
 			of the presentations have been made available to the commnity. The links below allow downloading or viewing these PDFs.</p>
 
-			<h3>Soybean Breeder's Workshop</h3>
-				<p> 2024 Soybean Breeders Workshop (SBW) February 12-14, 2024<br />
-                Theme: Entomolgy and Breeding Innovation<br />
-				Sheraton Westport Chalet in St. Louis, Missouri</p>				
+			<h3>2025 Soybean Breeder's Workshop (SBW_2025)</h3>
+				<p><b>When:</b>February 17-19, 2025<br />
+                <b>Theme:</b> <br />
+				<b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri</p>				
 
-			<a href='https://soybase.org/SBW/registration/index.php'>2024 Soybean Breeder's Workshop Information and registration page</a><br />
-				<h4>Soybean Breeder's Workshop Agenda Archive</h4>
+		<!--	<a href='https://soybase.org/SBW/registration/index.php'>2025 Soybean Breeder's Workshop Information and registration page</a><br /> -->
+				<h3>Soybean Breeder's Workshop Agenda and submitted Presentation Archive</h3>
+
+				<h4>Agenda and submitted Presentations</h4>
 				<table>
-					<tbody>
-						<tr>
-						<td>
-							<ul>
-								<li><a href="./SBW/SBW_2010.html" target="_blank">2010</a></li>
-<!--								<li><a href="./SBW/SBW_2011" target="_blank">2011</a></li>   --!>
-								<li><a href="./SBW/SBW_2012.html" target="_blank">2012</a></li>
-								<li><a href="./SBW/SBW_2013.html" target="_blank">2013</a></li>
-								<li><a href="./SBW/SBW_2014.html" target="_blank">2014</a></li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-								<li><a href="./SBW/SBW_2016.html" target="_blank">2016</a></li>
-								<li><a href="./SBW/SBW_2017.html" target="_blank">2017</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2018/2018_Soybean_Breeders_Workshop-Final-Agenda.pdf" target="_blank">2018</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2019/2019_SBW_Agenda-final.pdf" target="_blank">2019</a></li>
-							</ul>
-						</td>
-						<td>
-							<ul>
-                <li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2020/2020_SBW_Program-V3.pdf" target="_blank">2020</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2021/2021_SBW_Agenda-Final.pdf" target="_blank">2021</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2022/2022SBW_agenda.pdf" target="_blank">2022</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2023/SBW_agenda_2023.pdf" target="_blank">2023</a></li>
-								<li><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/2024Agenda.v2.pdf" target="_blank">2024</a></li>
-							</ul>
-						</td>
-           </tr>
-					</tbody>
+ 					 <tr>
+    					<td><a href="./SBW/SBW_2010.html" target="_blank">2010</a></td>
+    					<td><a href="./SBW/SBW_2012.html" target="_blank">2012</a></td>
+   						<td><a href="./SBW/SBW_2013.html" target="_blank">2013</a><</td>
+  					</tr>
+  					<tr>
+    					<td><a href="./SBW/SBW_2014.html" target="_blank">2014</a></td>
+    					<td><a href="./SBW/SBW_2016.html" target="_blank">2016</a><</td>
+    					<td><a href="./SBW/SBW_2017.html" target="_blank">2017</a></td>
+  					</tr>
+					<tr>
+    					<td>2024</td>
+    					<td>2025</td>
+    					<td>2026</td>
+  					</tr>
 				</table>
+				<h4>Agenda only; No submitted Presenations</h4>
+				<table>
+				<tr>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2018/2018_Soybean_Breeders_Workshop-Final-Agenda.pdf" target="_blank">2018</a></td>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2019/2019_SBW_Agenda-final.pdf" target="_blank">2019</a></td>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2020/2020_SBW_Program-V3.pdf" target="_blank">2020</a></td>
+				</tr>
+				<tr>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2021/2021_SBW_Agenda-Final.pdf" target="_blank">2021</a></td>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2022/2022SBW_agenda.pdf" target="_blank">2022</a></td>
+	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2023/SBW_agenda_2023.pdf" target="_blank">2023</a></td>
+				</tr>
+  				</table>
+
        <h3>Committee and Workshop Reports</h3>
 				<h4>Soybean Germplasm Committee Meeting Minutes</h4>
 				<table>
@@ -121,50 +122,3 @@ sitemap: community/sbw
 					</tbody>
 				</table>
 			<h4>All Crop Genetics Reports can be found at <a href="https://www.ars-grin.gov/CGC" target="_blank">GRIN</a></h4>
-<h3>Speaker Presentation from Previous Meetings</h3>
-				<table>
-				<tbody>
-					<tr>
-					<th>Workshop Date</th><th>Presentation Status</th>
-					</tr>
-					<tr>
-						<td><a href="./SBW/SBW_2010.html" id="2010meeting" name="2010meeting" title="2010 Soybean Breeder's Workshop Link" target="_self">Feb. 22-24, 2010</a></td><td>Presentations submitted</td>
-					<tr>
-<!--						<td><a href="./SBW/SBW_2011.html" id="2011meeting" name="2011meeting" title="2011 Soybean Breeder's Workshop Link" target="_self">Feb. 21-23, 2011</a></td><td>Presentations submitted</td> --!>
-					</tr>
-					<tr>
-						<td><a href="./SBW/SBW_2012.html" id="2012meeting" name="2012meeting" title="2012 Soybean Breeder's Workshop Link" target="_self">Feb. 27-29, 2012</a></td><td>Presentations submitted</td>
-					</tr>
-					</tr>
-						<td><a href="./SBW/SBW_2013.html" id="2013meeting" name="2012meeting" title="2013 Soybean Breeder's Workshop Link" target="_self">Feb. 11-13, 2013</a></td><td>Presentations submitted</td>
-					</tr>
-					<tr>
-						<td><a href="./SBW/SBW_2014.html" id="2014meeting" name="2014meeting" title="2014 Soybean Breeder's Workshop Link" target="_self">Feb. 17-19, 2014</a></td><td>Presentations submitted</td>
-					</tr>
-					<tr>
-						<td>Feb. 16-18, 2015</td><td>No presentations submitted</td>
-					</tr>
-					<tr>
-						<td><a href="./SBW/SBW_2016.html" id="2016meeting" name="2016meeting" title="2016 Soybean Breeder's Workshop Link" target="_self">Feb. 22-24, 2016</a></td><td>Presentations submitted</td>
-					</tr>
-					<tr>
-						<td><a href="./SBW/SBW_2017.html" id="2017meeting" name="2017meeting" title="2017 Soybean Breeder's Workshop Link" target="_self">Feb. 13-15, 2017</a></td><td>Presentations submitted</td
-					</tr>
-					<tr>
-						<td>Feb. 12-13, 2018</td><td>No presentations submitted</td>
-					</tr>
-					<tr>
-						<td>Feb. 11-12, 2019</td><td> No presentations submitted</td>
-					</tr>
-					<tr>
-						<td>Mar. 2-4, 2020</td><td> No presentations submitted</td>
-					</tr>
-					<tr>
-						<td>Feb. 22-24, 2021</td><td>No presentations submitted</td>
-					</tr>
-						<td>Feb. 14-16, 2022</td><td>No presentations submitted</td>
-					</tr>
-				</tbody>
-				</table>
-			
-
