--- a/index.html
+++ b/index.html
@@ -6,54 +6,50 @@ news_card: true
 events_card: true
 blog_card: true
 ---
-
-<h1>SoyBase</h1>
+<!-- <h1>SoyBase</h1> -->
 
 <p class="uk-text-default">SoyBase integrates genetic and genomic information to aid
  soybean breeders and researchers. This instance of the site has been ported to a 
  different framework in order to accommodate the rapidly-growing genomic data available. 
- We anticipate that that this transition will continue through 2023. 
+ We anticipate that that this transition will continue through 2025. 
  In the meantime, you can also continue to use <a href="https://soybase.org/" target="_blank">"SoyBase classic"</a>.
 </p>
 
 <p>
   The site is organized as follows. 
-  See <a href="/resources">GENOMICS</a> to access resources and tools such as browsers, InterMine instances, and other visualization tools. 
+  See <a href="/resources">GENOMICS</a> to access resources and tools such as browsers, GlycineMine, and other visualization tools. 
   See <a href="/collections">DATA COLLECTIONS</a> to access data sets for download. 
-  See <a href="/tools">TOOLS</a> if you have particular tasks in mind.
+  See <a href="/tools">TOOLS</a> Analysis and visualization tools for exploring and search data.
 </p>
 
 <dl>
   <dt><a href="{{ "/tools" | relative_url }}">Tools</a></dt>
-  <dd>Analysis tools for soybean: gene families and phylogenies, synteny visualization, etc. search, etc.</dd>
-
+  <dd>Analysis tools for soybean: BLAST search, Trait terms, GWAS/QTL markers and maps etc.</dd>
+<br>
   <dt><a href="{{ "/maps" | relative_url }}">Maps</a></dt>
-  <dd>Soybean genetic maps, the GlycineMine interface to SoyBase data, and visualization tools for exploring GWAS, QTL and diversity data.</dd>
-
+  <dd>Soybean genetic maps, the GlycineMine interface to SoyBase data, and visualization tools for exploring data.</dd>
+<br>
   <dt><a href="{{ "/resources" | relative_url }}">Genomics</a></dt>
-  <dd>Genomic resources for soybean: data sets, genome browsers, pan-gene sets, synteny visualizations, etc.</dd>
-    
+  <dd>Genomic resources for soybean: data sets, genome browsers, pan-gene sets, etc.</dd>
+<br>
   <dt><a href="{{ "/collections" | relative_url }}">Data Collections</a></dt>
   <dd>View synopses of and links to individual SoyBase Datastore collections.</dd>
-  
+<br>  
   <dt><a href="{{ "/projects" | relative_url }}">Projects</a></dt>
   <dd>Projects associated with or contributed by the soybean research-community.</dd>
-  
+<br>
   <dt><a href="{{ "/community" | relative_url }}">Community</a></dt>
-  <dd>Other community resources for soybean research.</dd>
-  
+  <dd>Community resources for soybean research.</dd>
+<br>
   <dt><a href="{{ "/about" | relative_url }}">About & Contact</a></dt>
   <dd>Information about soybean data such as nomenclature, data submission. Also, a form to contact us if you have questions or suggestions!</dd>
-  
+<br>
   <dt><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></dt>
   <dd>Videos and tutorials for working with SoyBase, and other videos about soybean.</dd>
-
-  <dt><a href="{{ "/blog" | relative_url }}">Blog</a></dt>
-  <dd>Learn about new data and tools available from LIS.</dd>
 </dl>
 
 <h2>Funding and Development</h2>
-<p>LIS is funded by the USDA-ARS. LIS is developed and hosted by the National Center for Genome Resources (NCGR) and the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with the help of many other researchers.</p>
+<p>SoyBase is funded by the USDA-ARS. SoyBase is developed and hosted by the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with development assistance from the National Center for Genome Resources (NCGR) with the help of many other researchers in the soybean community.</p>
 <div class="uk-child-width-expand@s uk-flex uk-flex-middle" uk-grid>
   <a href="https://www.ars.usda.gov/main/main.htm" target="_blank" title="USDA ARS website">
     <img src="{{ "assets/img/usda.svg" | relative_url }}" width="150" height="auto" alt="USDA logo"/>
