--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -3,7 +3,11 @@ layout: default
 title: Soybean Breeders Workshop 
 sitemap: community/sbw
 ---
-
+<style>
+tr, td {
+  padding: 20px;
+}
+</style>
 			<h2>Soybean Breeder's Workshop</h2>
 
 			<P>The Soybean Breeders Workshop is held annually in February in St. Louis, MO. Starting in 2010 copies
@@ -97,25 +101,25 @@ sitemap: community/sbw
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2018_soybean_CGC_report.pdf">2018</a></td> 
 						</tr>
 						<tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2017.pdf">2017</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2016.pdf">2016</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2015.pdf">2015</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2014.pdf">2014</a><</td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2017.pdf" target="_blank">2017</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2016.pdf" target="_blank">2016</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2015.pdf" target="_blank">2015</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2014.pdf" target="_blank">2014</a><</td>
 						</tr>
 						<tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2013.pdf">2013</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2012.pdf">2012</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2011.pdf">2011</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2009.pdf">2009</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2013.pdf" target="_blank">2013</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2012.pdf" target="_blank">2012</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2011.pdf" target="_blank">2011</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2009.pdf" target="_blank">2009</a></td>
 						</tr>
 						<tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2008.pdf">2008</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2007.html">2007</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2006.html">2006</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf">2005</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2008.pdf" target="_blank">2008</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2007.html" target="_blank">2007</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2006.html" target="_blank">2006</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf" target="_blank">2005</a></td>
 						</tr>
 						<tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2001.pdf">2001</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2001.pdf" target="_blank">2001</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2000.pdf" target="_blank">2000</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1998.pdf" target="_blank">1998</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1997.pdf" target="_blank">1997</a></td>
