--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -5,7 +5,7 @@ sitemap: community/sbw
 ---
 <style>
 tr, td {
-  padding: 20px;
+  padding: 15px;
 }
 </style>
 			<h2>Soybean Breeder's Workshop</h2>
@@ -26,26 +26,20 @@ tr, td {
  					 <tr>
     					<td><a href="./SBW/SBW_2010.html" target="_blank">2010</a></td>
     					<td><a href="./SBW/SBW_2012.html" target="_blank">2012</a></td>
-   						<td><a href="./SBW/SBW_2013.html" target="_blank">2013</a><</td>
+   						<td><a href="./SBW/SBW_2013.html" target="_blank">2013</a></td>
 						<td><a href="./SBW/SBW_2014.html" target="_blank">2014</a></td>
+						<td><a href="./SBW/SBW_2016.html" target="_blank">2016</a></td>
   					</tr>
   					<tr>
-    					
-    					<td><a href="./SBW/SBW_2016.html" target="_blank">2016</a></td>
     					<td><a href="./SBW/SBW_2017.html" target="_blank">2017</a></td>
 						<td><a href="./SBW/SBW_2024.html" target="_blank">2024</a></td>
 						<td>2025</td>
-  					</tr>
-					<tr>
-    					<td>2026</td>
-						<td>2027</td>
-						<td>2028</td>
-						<td>2029</td>
   					</tr>
 				</table>
 				<h4>Agenda only; No submitted Presenations</h4>
 				<table>
 				<tr>
+					<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2015/2015_SBW_Agenda_FINAL_20150212.pdf" target="_blank">2015</a></td>
 	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2018/2018_Soybean_Breeders_Workshop-Final-Agenda.pdf" target="_blank">2018</a></td>
 	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2019/2019_SBW_Agenda-final.pdf" target="_blank">2019</a></td>
 	  				<td><a href="https://data.legumeinfo.org/data/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2020/2020_SBW_Program-V3.pdf" target="_blank">2020</a></td>
@@ -66,28 +60,27 @@ tr, td {
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2020(1)%20-%20Soybean%20CGC%20Minutes.pdf" target="_blank">2020-1</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2019%20-%20Soybean%20CGC%20Minutes.pdf" target="_blank">2019</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2018_soybean_CGC_minutes.pdf" target="_blank">2018</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2017.pdf" target="_blank">2017</a></td>
 						  </tr>
 						  <tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2017.pdf" target="_blank">2017</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2016.pdf" target="_blank">2016</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2015.pdf" target="_blank">2015</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2014.pdf" target="_blank">2014</a></td>
-						  </tr>
-							<tr>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2013.pdf" target="_blank">2013</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2012.pdf" target="_blank">2012</a></td>
+						  </tr>
+							<tr>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2011.pdf" target="_blank">2011</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2009.pdf" target="_blank">2009</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2008.pdf" target="_blank">2008</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2007.html" target="_blank">2007</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2006.html" target="_blank">2006</a></td>
 						  </tr>
 						  <tr>
-							  <td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2008.pdf" target="_blank">2008</a></td>
-							  <td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2007.html" target="_blank">2007</a></td>
-							  <td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2006.html" target="_blank">2006</a></td>
-							  <td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf" target="_blank">2005</a></td>
+
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf" target="_blank">2005</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2001.pdf" target="_blank">2001</a></td>
 						  </tr>
-						  <tr>
-							  <td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2001.pdf" target="_blank">2001</a></td>
-							</tr> 
 					</tbody>
 				</table>
 				<h4>Soybean Crop Genetics Committee Reports</h4>
@@ -98,27 +91,25 @@ tr, td {
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2021%20-%20Soybean%20Curator%20Report.pdf" target="_blank">2021</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2020%20-%20Soybean%20Curator%20Report.pdf" target="_blank">2020</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2019%20-%20Soybean%20Curator%20Report.pdf" target="_blank">2019</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2018_soybean_CGC_report.pdf">2018</a></td> 
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/2018_soybean_CGC_report.pdf" target="_blank">2018</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2017.pdf" target="_blank">2017</a></td>
 						</tr>
 						<tr>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2017.pdf" target="_blank">2017</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2016.pdf" target="_blank">2016</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2015.pdf" target="_blank">2015</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2014.pdf" target="_blank">2014</a><</td>
-						</tr>
-						<tr>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2014.pdf" target="_blank">2014</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2013.pdf" target="_blank">2013</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2012.pdf" target="_blank">2012</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2011.pdf" target="_blank">2011</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2009.pdf" target="_blank">2009</a></td>
 						</tr>
 						<tr>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2011.pdf" target="_blank">2011</a></td>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2009.pdf" target="_blank">2009</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2008.pdf" target="_blank">2008</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2007.html" target="_blank">2007</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2006.html" target="_blank">2006</a></td>
-							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf" target="_blank">2005</a></td>
 						</tr>
 						<tr>
+							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanminutes2005.pdf" target="_blank">2005</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2001.pdf" target="_blank">2001</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus2000.pdf" target="_blank">2000</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1998.pdf" target="_blank">1998</a></td>
@@ -129,8 +120,6 @@ tr, td {
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1995.pdf" target="_blank">1995</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1994.pdf" target="_blank">1994</a></td>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1993.pdf" target="_blank">1993</a></td>
-						</tr>
-						<tr>
 							<td><a href="https://www.ars-grin.gov/npgs/cgc_reports/soybeanstatus1992.pdf" target="_blank">1992</a></td>
 						</tr>
 					</tbody>
