finish SBW small edits and add soy2025 edits

--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -32,7 +32,8 @@ tr, td {
   					</tr>
   					<tr>
     					<td><a href="./SBW/SBW_2017.html" target="_blank">2017</a></td>
-						<td><a href="./SBW/SBW_2024.html" target="_blank">2024</a></td>
+						<td>2024</td>
+						<!--<td><a href="./SBW/SBW_2024.html" target="_blank">2024</a></td>-->
 						<td>2025</td>
   					</tr>
 				</table>
