--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@ blog_card: true
       <td>
         <div class="uk-button" title="Enter one or more sequences and search against soybean genomes, proteins, or transcript sequences.">
           <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Cornsilk;">
-            <a href="/tools/sequenceserver/">Sequence search (BLAST)</a>
+            <a href="/tools/sequenceserver/"><b>Sequence search (BLAST)</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Enter one or more sequences and annotate them, view in a phylogenetic tree, etc.">
           <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Cornsilk;">
-            <a href="https://funnotate.legumeinfo.org/">Sequence annotate</a>
+            <a href="https://funnotate.legumeinfo.org/"><b>Sequence annotate</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Glycine pangenes, or look up corresponding gene IDs between annotations.">
           <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Cornsilk;">
-            <a href="/tools/translate/">Pangenes / gene translator</a>
+            <a href="/tools/translate/"><b>Pangenes / gene translator</b></a>
           </button>
         </div>
       </td>
@@ -111,22 +111,22 @@ blog_card: true
     <tr>
       <td>
         <div class="uk-button" title="InterMine for soybean and wild relatives in Glycine.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;">
-            <a href="https://mines.legumeinfo.org/glycinemine/begin.do">GlycineMine</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Seashell;">
+            <a href="https://mines.legumeinfo.org/glycinemine/begin.do"><b>GlycineMine</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Search for studies by trait term, author, etc.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;">
-            <a href="/tools/search/trait.html">Trait association search</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Seashell;">
+            <a href="/tools/search/trait.html"><b>Trait association search</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Enter a list of genes (Wm82 a2) and test for enrichment of gene ontology terms -- or annotate your list.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;" >
-            <a href="/tools/analysis/go.html">GO enrichment</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Seashell;" >
+            <a href="/tools/analysis/go.html"><b>GO enrichment</b></a>
           </button>
         </div>
       </td>
@@ -136,22 +136,22 @@ blog_card: true
     <tr>
       <td>
         <div class="uk-button" title="Visualize trait features (QTL and GWAS) using the CMap-js tool.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
-            <a href="/maps">Genetic & trait maps</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Azure;">
+            <a href="/maps"><b>Genetic & trait maps</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Genome browsers (JBrowse and GBrowse) for visualizing genes and other features on chromosomes.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
-            <a href="/tools/browsers">Genome browsers</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Azure;">
+            <a href="/tools/browsers"><b>Genome browsers</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="GCViT tool for visualizing variants (SNPs) between selected genotypes.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
-            <a href="/tools/gcvit/">Genotype comparisons</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:Azure;">
+            <a href="/tools/gcvit/"><b>Genotype comparisons</b></a>
           </button>
         </div>
       </td>
@@ -161,22 +161,22 @@ blog_card: true
     <tr>
       <td>
         <div class="uk-button" title="Soybean GWAS features from many studies, against a common framework (ZZbrowse tools).">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
-            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y">GWAS viewer</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:MistyRose;">
+            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y"><b>GWAS viewer</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Soybean QTL features from many studies, against a common framework (ZZbrowse tools).">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
-            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20QTL&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y">QTL viewer</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:MistyRose;">
+            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20QTL&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y"><b>QTL viewer</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="QTL and/or GWAS features from many studies; compare between soybean and another selected species (slow; please be patient).">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
-            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=y&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y">cross-species QTL/GWAS</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:MistyRose;">
+            <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=y&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y"><b>cross-species QTL/GWAS</b></a>
           </button>
         </div>
       </td>
@@ -186,22 +186,22 @@ blog_card: true
     <tr>
       <td>
         <div class="uk-button" title="View geographic origins of Glycine accessions in the USDA GRIN-Global system.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:AntiqueWhite;">
-            <a href="https://germplasm-map.legumeinfo.org/#?zoom=4&maxRecs=2000&taxonQuery=Glycine&traitOverlay=&traitScale=global&country=&geocodedOnly&traitExcludeUnchar=false&limitToMapExtent=false&lat=-15.03&lng=154.16&mapHeight=341.5&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=-0.17578097424708533&ne_lng=210.05859375000003&sw_lat=-28.921631282421302&sw_lng=98.26171875000001&accessionIdsInclusive=false">Germplasm GIS</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="width:200px; background-color:AntiqueWhite;">
+            <a href="https://germplasm-map.legumeinfo.org/#?zoom=4&maxRecs=2000&taxonQuery=Glycine&traitOverlay=&traitScale=global&country=&geocodedOnly&traitExcludeUnchar=false&limitToMapExtent=false&lat=-15.03&lng=154.16&mapHeight=341.5&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=-0.17578097424708533&ne_lng=210.05859375000003&sw_lat=-28.921631282421302&sw_lng=98.26171875000001&accessionIdsInclusive=false"><b>Germplasm GIS</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="Search and view soybean genes in their metabolic pathways.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="background-color:AntiqueWhite;">
-            <a href="/tools/soycyc">Metabolic pathways</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="width:200px; background-color:AntiqueWhite;">
+            <a href="/tools/soycyc"><b>Metabolic pathways</b></a>
           </button>
         </div>
       </td>
       <td>
         <div class="uk-button" title="View soybean varieties and accessions and their pedigrees.">
-          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="background-color:AntiqueWhite;">
-            <a href="/tools/parentage/">Parentage & pedigrees</a>
+          <button class="uk-button uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="width:200px; background-color:AntiqueWhite;">
+            <a href="/tools/parentage/"><b>Parentage & pedigrees</b></a>
           </button>
         </div>
       </td>
