--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -6,29 +6,56 @@ tools_menu: true
 gbrowse_instances:
 - category: "Glycine max"
   name: "Wm82.a4"
-  url: "https://soybase.org/gb2/gbrowse/glyma.Wm82.gnm4/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Wm82.gnm4/"
 - category: "Glycine max"
   name: "Wm82.a2"
-  url: "https://soybase.org/gb2/gbrowse/gmax2.0/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/gmax2.0/"
   description: "(The largest track collection: genes, markers, expression, methylation, synteny ...)"
 - category: "Glycine max"
   name: "Wm82.a1"
-  url: "https://soybase.org/gb2/gbrowse/gmax1.01/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/gmax1.01/"
 - category: "Glycine max"
   name: "Fiskeby III"
-  url: "https://soybase.org/gb2/gbrowse/glyma.FiskebyIII.gnm1/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.FiskebyIII.gnm1/"
 - category: "Glycine max"
   name: "Lee"
-  url: "https://soybase.org/gb2/gbrowse/glyma.Lee.gnm1/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Lee.gnm1/"
 - category: "Glycine max"
   name: "Zh13"
-  url: "https://soybase.org/gb2/gbrowse/glyma.Zh13.gnm1/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Zh13.gnm1/"
 - category: "Glycine soja"
   name: "PI 483463"
-  url: "https://soybase.org/gb2/gbrowse/glyso.PI483463.gnm1/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyso.PI483463.gnm1/"
 - category: "Glycine soja"
   name: "W05"
-  url: "https://soybase.org/gb2/gbrowse/glyso.W05.gnm1/"
+  url: "https://legacy.soybase.org/gb2/gbrowse/glyso.W05.gnm1/"
+
+gbrowse_iframe_suffixes:
+- category: "Glycine max"
+  name: "Wm82.a4"
+  url_suffix: "/gbrowse/glyma.Wm82.gnm4/"
+- category: "Glycine max"
+  name: "Wm82.a2"
+  url_suffix: "/gbrowse/gmax2.0/"
+  description: "(The largest track collection: genes, markers, expression, methylation, synteny ...)"
+- category: "Glycine max"
+  name: "Wm82.a1"
+  url_suffix: "/gbrowse/gmax1.01/"
+- category: "Glycine max"
+  name: "Fiskeby III"
+  url_suffix: "/gbrowse/glyma.FiskebyIII.gnm1/"
+- category: "Glycine max"
+  name: "Lee"
+  url_suffix: "/gbrowse/glyma.Lee.gnm1/"
+- category: "Glycine max"
+  name: "Zh13"
+  url_suffix: "/gbrowse/glyma.Zh13.gnm1/"
+- category: "Glycine soja"
+  name: "PI 483463"
+  url_suffix: "/gbrowse/glyso.PI483463.gnm1/"
+- category: "Glycine soja"
+  name: "W05"
+  url_suffix: "/gbrowse/glyso.W05.gnm1/"
 
 ---
 
@@ -41,6 +68,9 @@ gbrowse_instances:
   tab, with browsers listed under each accession -- or directly from the links below; legacy GBrowse first, then JBrowse.
 </p>
 
+<br>
+
+<p><b>TEST direct links:</b></p>
 {% assign groups = page.gbrowse_instances | group_by: "category" | sort: "name" %}
 {% for species in groups %}
   <u>G</u>Browse instances for <b><i>{{ species.name }}</i></b> (legacy; see newer JBrowse instances below)
@@ -54,6 +84,19 @@ gbrowse_instances:
   </div>
 {% endfor %}
 
+<p><b>TEST iframed links:</b></p>
+{% assign groups = page.gbrowse_iframe_suffixes | group_by: "category" | sort: "name" %}
+{% for species in groups %}
+  <u>G</u>Browse instances for <b><i>{{ species.name }}</i></b> (legacy; see newer JBrowse instances below)
+  <br>
+  <div style="margin-left:10px">
+    {% for item in species.items %}
+      <a href="{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}"><b>{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}</b></a>
+      {{ item.description }}
+      <br>
+    {% endfor %}
+  </div>
+{% endfor %}
 
 {% assign doi = "DOI" %}
 {% assign genus = "Glycine" %}
