--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -33,29 +33,29 @@ gbrowse_instances:
 gbrowse_iframe_suffixes:
 - category: "Glycine max"
   name: "Wm82.a4"
-  url_suffix: "/gbrowse/glyma.Wm82.gnm4/"
+  url_suffix: "glyma.Wm82.gnm4"
 - category: "Glycine max"
   name: "Wm82.a2"
-  url_suffix: "/gbrowse/gmax2.0/"
+  url_suffix: "gmax2.0"
   description: "(The largest track collection: genes, markers, expression, methylation, synteny ...)"
 - category: "Glycine max"
   name: "Wm82.a1"
-  url_suffix: "/gbrowse/gmax1.01/"
+  url_suffix: "gmax1.01"
 - category: "Glycine max"
   name: "Fiskeby III"
-  url_suffix: "/gbrowse/glyma.FiskebyIII.gnm1/"
+  url_suffix: "glyma.FiskebyIII.gnm1"
 - category: "Glycine max"
   name: "Lee"
-  url_suffix: "/gbrowse/glyma.Lee.gnm1/"
+  url_suffix: "glyma.Lee.gnm1"
 - category: "Glycine max"
   name: "Zh13"
-  url_suffix: "/gbrowse/glyma.Zh13.gnm1/"
+  url_suffix: "glyma.Zh13.gnm1"
 - category: "Glycine soja"
   name: "PI 483463"
-  url_suffix: "/gbrowse/glyso.PI483463.gnm1/"
+  url_suffix: "glyso.PI483463.gnm1"
 - category: "Glycine soja"
   name: "W05"
-  url_suffix: "/gbrowse/glyso.W05.gnm1/"
+  url_suffix: "glyso.W05.gnm1"
 
 ---
 
@@ -91,7 +91,8 @@ gbrowse_iframe_suffixes:
   <br>
   <div style="margin-left:10px">
     {% for item in species.items %}
-      <a href="{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}"><b>{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}</b></a>
+      <a href="{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}"><b>{{ item.name }}</b>
+      </a>
       {{ item.description }}
       <br>
     {% endfor %}
