--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -5,39 +5,11 @@ tools_menu: true
 
 gbrowse_instances:
 - category: "Glycine max"
-  name: "Wm82.a4"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Wm82.gnm4/"
-- category: "Glycine max"
   name: "Wm82.a2"
-  url: "https://legacy.soybase.org/gb2/gbrowse/gmax2.0/"
-  description: "(The largest track collection: genes, markers, expression, methylation, synteny ...)"
-- category: "Glycine max"
-  name: "Wm82.a1"
-  url: "https://legacy.soybase.org/gb2/gbrowse/gmax1.01/"
-- category: "Glycine max"
-  name: "Fiskeby III"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.FiskebyIII.gnm1/"
-- category: "Glycine max"
-  name: "Lee"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Lee.gnm1/"
-- category: "Glycine max"
-  name: "Zh13"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyma.Zh13.gnm1/"
-- category: "Glycine soja"
-  name: "PI 483463"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyso.PI483463.gnm1/"
-- category: "Glycine soja"
-  name: "W05"
-  url: "https://legacy.soybase.org/gb2/gbrowse/glyso.W05.gnm1/"
-
-gbrowse_iframe_suffixes:
+  url_suffix: "gmax2.0"
 - category: "Glycine max"
   name: "Wm82.a4"
   url_suffix: "glyma.Wm82.gnm4"
-- category: "Glycine max"
-  name: "Wm82.a2"
-  url_suffix: "gmax2.0"
-  description: "(The largest track collection: genes, markers, expression, methylation, synteny ...)"
 - category: "Glycine max"
   name: "Wm82.a1"
   url_suffix: "gmax1.01"
@@ -68,36 +40,28 @@ gbrowse_iframe_suffixes:
   tab, with browsers listed under each accession -- or directly from the links below; legacy GBrowse first, then JBrowse.
 </p>
 
+<b><u>G</u>Browse instances</b> (legacy; see newer JBrowse instances below). The largest track collection is in Wm82.a2.
 <br>
-
-<p><b>TEST direct links:</b></p>
+(Click <b>**</b> for unframed links: use for Safari; also useful for bookmarking and sharing track configurations and views)
+<br>
 {% assign groups = page.gbrowse_instances | group_by: "category" | sort: "name" %}
+{% assign asterisk = "**" %}
 {% for species in groups %}
-  <u>G</u>Browse instances for <b><i>{{ species.name }}</i></b> (legacy; see newer JBrowse instances below)
+  <u><i>{{ species.name }}</i></u>
   <br>
-  <div style="margin-left:10px">
+  {%- capture browser_list -%}
     {% for item in species.items %}
-      <a href="{{ item.url }}"><b>{{ item.name }}</b></a> 
-      {{ item.description }}
-      <br>
+      <a href="{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}">
+        <b>{{ item.name | prepend: ", " }} </b>
+      </a>
+      <a href="{{ item.url_suffix | prepend: 'https://legacy.soybase.org/gb2/gbrowse/' }}"><b>{{ asterisk }}</b></a> 
     {% endfor %}
+  {%- endcapture -%}
+  <div style="margin-left:10px">
+    {{ browser_list | remove_first: ', ' }}
   </div>
 {% endfor %}
 
-<p><b>TEST iframed links:</b></p>
-{% assign groups = page.gbrowse_iframe_suffixes | group_by: "category" | sort: "name" %}
-{% for species in groups %}
-  <u>G</u>Browse instances for <b><i>{{ species.name }}</i></b> (legacy; see newer JBrowse instances below)
-  <br>
-  <div style="margin-left:10px">
-    {% for item in species.items %}
-      <a href="{{ item.url_suffix | prepend: '/tools/browsers/gbrowse.html?iframe_pathname_suffix=' }}"><b>{{ item.name }}</b>
-      </a>
-      {{ item.description }}
-      <br>
-    {% endfor %}
-  </div>
-{% endfor %}
 
 {% assign doi = "DOI" %}
 {% assign genus = "Glycine" %}
